--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,15 @@
     ],
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "doctrine/annotations": "^1.13",
+        "doctrine/dbal": "^3.9",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/doctrine-module": "^6.1",
+        "doctrine/doctrine-orm-module": "^6.1",
+        "doctrine/orm": "^2.20",
         "laminas/laminas-component-installer": "^3.4.0",
         "laminas/laminas-development-mode": "^3.12.0",
+        "laminas/laminas-i18n": "^2.29",
         "laminas/laminas-mvc": "^3.7.0",
         "laminas/laminas-skeleton-installer": "^1.3.0"
     },
