--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ config/development.config.php
 data/cache/*
 !data/cache/.gitkeep
 phpunit.xml
-module/Application/data/doctrine-proxies/
+data/doctrine-proxies/
