--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laminas/laminas-development-mode": "^3.12.0",
         "laminas/laminas-i18n": "^2.29",
         "laminas/laminas-mvc": "^3.7.0",
-        "laminas/laminas-skeleton-installer": "^1.3.0"
+        "laminas/laminas-skeleton-installer": "^1.3.0",
+        "laminas/laminas-validator": "^2.64"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
